--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,5 @@
 VERSION_NAME=0.4.99
 GROUP=com.meituan.robust
 
+org.gradle.jvmargs=-XX:+UnlockExperimentalVMOptions --add-opens com.migu.plugin/com.meituan.robust=ALL-UNNAMED
+
