--- a/auto-patch-plugin/build.gradle
+++ b/auto-patch-plugin/build.gradle
@@ -1,15 +1,34 @@
 apply plugin: 'groovy'
+apply plugin: 'maven-publish'
 compileGroovy {
-    sourceCompatibility = 1.7
-    targetCompatibility = 1.7
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
 }
 
 dependencies {
-    compile gradleApi()
-    compile localGroovy()
-    compile 'com.android.tools.build:gradle:2.1.0'
-    compile 'org.javassist:javassist:3.20.0-GA'
+    implementation gradleApi()
+    implementation localGroovy()
+    implementation "com.android.tools.build:gradle:7.4.2"
+    implementation 'org.javassist:javassist:3.20.0-GA'
+    implementation 'commons-io:commons-io:2.11.0'
 //    compile 'com.meituan.robust:autopatchbase:' + VERSION_NAME
-    compile project(':autopatchbase')
+    implementation project(':autopatchbase')
 }
-apply from: '../gradle_mvn_push.gradle'
+
+publishing {
+    publications {
+        maven(MavenPublication){
+            groupId 'com.migu.plugin'
+            artifactId 'auto-patch-plugin'
+            version '1.0.0'
+            from components.java
+        }
+    }
+
+    repositories {
+        maven{
+            url = "../plugins"
+        }
+    }
+}
+//apply from: '../gradle_mvn_push_local.gradle'
