--- a/gradle-plugin/build.gradle
+++ b/gradle-plugin/build.gradle
@@ -1,17 +1,36 @@
 apply plugin: 'groovy'
+apply plugin: 'maven-publish'
 compileGroovy {
     sourceCompatibility = 1.7
     targetCompatibility = 1.7
 }
 dependencies {
-    compile gradleApi()
-    compile localGroovy()
-    compile 'com.android.tools.build:gradle:2.1.0'
-    compile 'org.javassist:javassist:3.20.0-GA'
-    compile fileTree(dir: "./src/main/libs", include: ['*.jar'])
-    compile project(':autopatchbase')
+    implementation gradleApi()
+    implementation localGroovy()
+    implementation "com.android.tools.build:gradle:3.4.2"
+    implementation 'org.javassist:javassist:3.20.0-GA'
+    implementation 'commons-io:commons-io:2.11.0'
+    implementation fileTree(dir: "./src/main/libs", include: ['*.jar'])
+    implementation project(':autopatchbase')
 //    compile 'com.meituan.robust:autopatchbase:0.4.93'
-    compile 'org.ow2.asm:asm:5.0.1'
+    implementation 'org.ow2.asm:asm:5.0.1'
 }
 
-apply from: '../gradle_mvn_push.gradle'
+publishing {
+    publications {
+        maven(MavenPublication){
+            groupId 'com.migu.plugin'
+            artifactId 'gradle-plugin'
+            version '1.0.0'
+            from components.java
+        }
+    }
+
+    repositories {
+        maven{
+            url = "../plugins"
+        }
+    }
+}
+
+
